Fixed tab that covered the map

--- a/WeCraft/components/bodyOfThePage/css/cssBodyOfThePage.css
+++ b/WeCraft/components/bodyOfThePage/css/cssBodyOfThePage.css
@@ -28,6 +28,7 @@ nav {
 
 .btn-group {
   position: fixed;
+  z-index:999;
   bottom: 0px;
   padding-bottom: 40px;
   transform: translateX(24px);
